# DesignPattern

./: .gitignore
单例模式/: CMakeLists.txt  main.cpp  singleton.cpp  单例模式.md
单例模式/include/: singleton.h
工厂方法模式/: CMakeLists.txt  factory_method_pattern.cpp  main.cpp  工厂方法模式.md
工厂方法模式/include/: factory_method_pattern.h
